--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     gap: 24px;
     background-color: var(--white);
@@ -55,6 +55,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 16px;
+    text-align: center;
     padding-inline: 16px;
 }
 
@@ -68,4 +69,12 @@ body {
 .div-description p:nth-of-type(2) {
     color: var(--slate-500);
     text-align: center;
+}
+
+@media (min-width: 1440px) {
+    
+body {
+    width: 1440px;
+    height: 960px;
+}
 }
